--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
+  "proxy": "http://localhost:3000",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -20,11 +21,12 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-use-websocket": "^4.5.0",
-    "socket.io-client": "^4.7.2"
+    "react-window": "^1.8.9"
   },
   "devDependencies": {
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
+    "@types/react-window": "^1.8.6",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
