--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,10 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    "types": ["react", "react-dom", "react-window"]
+
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
